Implemented FileUpload- middleware
